set(PROCESSOR_SRCS
    ${CMAKE_CURRENT_LIST_DIR}/processor.cpp
)

set(PROCESSOR_HEADERS
    ${CMAKE_CURRENT_LIST_DIR}/processor.h
    ${CMAKE_CURRENT_LIST_DIR}/dll_export.h
)

set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_library(processor SHARED ${PROCESSOR_SRCS} ${PROCESSOR_HEADERS})

target_include_directories(processor PUBLIC ${CMAKE_CURRENT_LIST_DIR})