set(PROCESSOR_SRCS
    ${CMAKE_CURRENT_LIST_DIR}/instruction_set.cpp
    ${CMAKE_CURRENT_LIST_DIR}/proc_65c816.cpp
)

set(PROCESSOR_HEADERS
    ${CMAKE_CURRENT_LIST_DIR}/address_mode.h
    ${CMAKE_CURRENT_LIST_DIR}/dll_export.h
    ${CMAKE_CURRENT_LIST_DIR}/instruction_set.h
    ${CMAKE_CURRENT_LIST_DIR}/proc_65c816.h
    ${CMAKE_CURRENT_LIST_DIR}/register.h
    ${CMAKE_CURRENT_LIST_DIR}/stdafx.h
)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_library(processor SHARED ${PROCESSOR_SRCS} ${PROCESSOR_HEADERS})

set_property(TARGET processor PROPERTY CXX_STANDARD 17)
set_property(TARGET processor PROPERTY CXX_STANDARD_REQUIRED ON)

target_include_directories(processor PUBLIC ${CMAKE_CURRENT_LIST_DIR})